--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,13 @@
 <html>
     <head>
         <title>Welcome!</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <p>We can build a full webpage here</p>
-        <form>
-            <input type="text" name="nickname" value="Enter your nickname"/>
+        <h1>Enter The Password</h1>
+<!--password = p@ssword123-->
+        <form  method = "post" action = "/password">
+            <input type="password" name="password" value=""/>
             <input type="submit" value="Submit"/>
         </form>
     </body>
