--- a/templates/index2.html
+++ b/templates/index2.html
@@ -1,16 +1,16 @@
 <html>
     <head>
         <title>Welcome!</title>
-        <link rel="stylesheet" type="text/css" href="static/css/style.css?q={{ time }}" />    
+        <link rel="stylesheet" type="text/css" href="static/css/style.css?q={{ time }}" />
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@500&display=swap" rel="stylesheet">
-        </head>
+    </head>
     <body>
         <h1>Enter The Password</h1>
-<!--password = p@ssword123-->
-        <form  method = "post" action = "/password5">
+
+<!--hint = try putting "password" at the end of  the url-->
+        <form  method = "post" action = "/password2">
             <input type="password" name="password" value=""/>
             <input type="submit" value="Submit"/>
         </form>
-        <p7 id = "hint"> Hint: F12</p7>
     </body>
 </html>
