--- a/templates/password.html
+++ b/templates/password.html
@@ -1,13 +1,12 @@
 <html>
     <head>
-        <title>Welcome!</title>
+        <title>Password</title>
         <link rel="stylesheet" type="text/css" href="static/css/style2.css?q={{ time }}" />    
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@500&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>
-            congrats you've gotten past the first level
+            Level 2 password = 123456789
         </h1>
-        <button type="button"><a href = "/index2"> Level 2</a></button>
     </body>
 </html>
