--- a/static/css/style3.css
+++ b/static/css/style3.css
@@ -1,7 +1,7 @@
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
-  background-image: url('https://media.giphy.com/media/MGJmhkm7SH05y/giphy.gif');
+  background-image: url('https://wallpaperplay.com/walls/full/4/9/2/161160.jpg');
   background-size: cover;
   height: 100vh;
   padding:0;
