--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -26,6 +26,7 @@ h1 {
     24px -19px 10px 0px #FF7F00, 27px -23px 10px 0px #FF0000,
     5px 5px 15px 5px rgba(0, 0, 0, 0);
   margin-top: 0px;
+  margin-left: 600px
 }
 h3 {
   margin-top: 200px;
