--- a/static/css/style3.css
+++ b/static/css/style3.css
@@ -15,6 +15,7 @@ h1 {
   border-radius: 15px 50px;
   border: 10px solid green;
   text-align: center;
+  color: white;
   background: red;
   -webkit-box-shadow: 17px 20px 41px -1px #000000;
   -webkit-box-shadow: 7px -5px 10px 0px #4B0082, 11px -9px 10px 0px #0000FF,
