--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,6 @@
             <input type="password" name="password" value=""/>
             <input type="submit" value="Submit"/>
         </form>
-        <p7 id = "hint"> Hint: F12</p7>
+        <h2> Hint : CLick  F12 </h2>
     </body>
 </html>
