--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,8 +20,7 @@ form{margin-left: 850px;
     color: grey;
 }
 
-p7 {
-    margin-left: 750px;
+h2 {
     text-align: center;
-    color: grey;
+    color: Black;
 }
