--- a/templates/index2.html
+++ b/templates/index2.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Enter The Password</h1>
 
-<!--hint = try putting "password" at the end of  the url-->
+<!--hint = REPLACE THE INDEX2 WITH password AT THE END OF THE URL-->
         <form  method = "post" action = "/password2">
             <input type="password" name="password" value=""/>
             <input type="submit" value="Submit"/>
