--- a/templates/results2.html
+++ b/templates/results2.html
@@ -8,5 +8,8 @@
         <h1>
             congrats you've gotten into the Mainframe
         </h1>
+        <div class = "meme"> 
+        <a href= "https://www.reddit.com/r/memes/"> MEMES </a>
+        </div>
     </body>
 </html>
