--- a/templates/results3.html
+++ b/templates/results3.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <h1>
-            congrats you've gotten past the first level
+            congrats you've gotten past the second level
         </h1>
-        <button type="button"><a href = "/index3"> Level 2</a></button>
+        <button type="button"><a href = "/index2"> Level 3</a></button>
     </body>
 </html>
